--- a/CoffeCheap/web/resources/css/default.css
+++ b/CoffeCheap/web/resources/css/default.css
@@ -79,6 +79,11 @@ thead{
     color:white;
 }
 
+.ui-selectonemenu-item.ui-selectonemenu-list-item.ui-corner-all{
+  background: black;
+  
+  color:white;
+}
 /*de botfaces
 
 .sub-header {
