--- a/CoffeCheap/web/WEB-INF/template/Template.xhtml
+++ b/CoffeCheap/web/WEB-INF/template/Template.xhtml
@@ -11,7 +11,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <h:outputStylesheet name="/css/default.css"/>
     <h:outputStylesheet name="/css/cssLayout.css"/>
-   <f:event type="preRenderView" listener="#{verificar_login.vrificarSession()}"/> 
+  <!-- <f:event type="preRenderView" listener="{verificar_login.vrificarSession()}"/> -->
    
     <link href="../../resources/css/animate.css" rel="stylesheet" type="text/css"/>
 
