--- a/CoffeCheap/web/resources/css/default.css
+++ b/CoffeCheap/web/resources/css/default.css
@@ -98,6 +98,12 @@ thead{
 }
 
 
+
+
+.ui-growl-item-container.ui-state-highlight.ui-corner-all.ui-helper-hidden.ui-shadow{
+   margin-top: 40px;
+}
+ 
 /*de botfaces
 
 .sub-header {
