--- a/CoffeCheap/web/WEB-INF/template/Template.xhtml
+++ b/CoffeCheap/web/WEB-INF/template/Template.xhtml
@@ -12,6 +12,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <h:outputStylesheet name="/css/default.css"/>
     <h:outputStylesheet name="/css/cssLayout.css"/>
+    <script src="../../resources/css/jquery-1.12.2.min.js" type="text/javascript"></script>
+    
   <!-- <f:event type="preRenderView" listener="{verificar_login.vrificarSession()}"/> -->
    
     <link href="../../resources/css/animate.css" rel="stylesheet" type="text/css"/>
