--- a/CoffeCheap/web/resources/css/default.css
+++ b/CoffeCheap/web/resources/css/default.css
@@ -5,7 +5,7 @@ body {
   font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
   color: #000000; /*color negro letra*/ 
   margin: 10px;
-  
+
 }
 
 h1 {
@@ -13,7 +13,7 @@ h1 {
   border-bottom: 1px solid #AFAFAF; 
   font-size:  21px;
   font-weight: bold;
-  
+
   margin: 0px;
   padding: 0px;
   color: #D20005;    /*rojo*/
@@ -34,34 +34,31 @@ a:link:hover, a:visited:hover  {
 .ui-dialog.ui-widget-content {
   background-image: none;
   background-color: rgba(83,72,63,0.5);
-   font-size: 16px;
+  font-size: 16px;
 }
 
 .ui-datalist-content.ui-widget-content{  
   background-image: none;
   /*background-color: rgba(83,72,63,0.5);*/
   background-color: rgba(25,25,25,0.5);
- font-size: 16px;  
+  font-size: 16px;  
 }
 
 .ui-widget-content{
-  
+
   background-image: none;
   background-color: rgba(83,72,63,0.1);
-   font-size: 16px;  
+  font-size: 16px;  
 }
 
 .ui-button-text.ui-c{
-   /*background-color: rgba(83,72,63,0.5);*/
-  
- 
-
+  /*background-color: rgba(83,72,63,0.5);*/
 }
 
 input{
-   /*background-color: rgba(83,72,63,0.5);*/
+  /*background-color: rgba(83,72,63,0.5);*/
   background-color: rgba(25,25,25,0.5);
-   font-size: 16px;
+  font-size: 16px;
 
 }
 
@@ -70,40 +67,54 @@ input{
 }
 
 thead{
-    background-color: sienna;
+  background-color: sienna;
 }
 
 .dataTables_length{
- color: white;
+  color: white;
 }
 
 .dataTables_info{
-    color:white;
+  color:white;
 }
 
 .ui-selectonemenu-item.ui-selectonemenu-list-item.ui-corner-all{
   background: black;
-  
+
   color:white;
 }
 
-.ui-datepicker-calendar{
-  background: white;
-}
+
 
 
 
 #desactivado{
-    background-color: rgba(52,52,52,0.05);
+  background-color: rgba(52,52,52,0.05);
 }
 
 
 
 
 .ui-growl-item-container.ui-state-highlight.ui-corner-all.ui-helper-hidden.ui-shadow{
-   margin-top: 40px;
+  margin-top: 40px;
+  /*Maneja la notificaciones de un lado de la pantalla*/
 }
- 
+
+/*
+.ui-timepicker-div{
+  background-color: white;
+}
+
+.ui-datepicker-calendar{
+  background: white;
+}
+*/
+
+.ui-datepicker.ui-widget.ui-widget-content.ui-helper-clearfix.ui-corner-all{
+  background-color: white;
+}
+
+
 /*de botfaces
 
 .sub-header {
@@ -170,11 +181,11 @@ thead{
             border-radius: 50%;
             display: inline-block;
         }
-        */
-        
+*/
+
 /* Galileo CSS */
-    
-  body, html {
+
+body, html {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -186,18 +197,18 @@ thead{
 }
 
 .leftpane {
-    width: 33%;
-    height: 100%;
-    float: left;
-    border-collapse: collapse;
+  width: 33%;
+  height: 100%;
+  float: left;
+  border-collapse: collapse;
 }
 
 .middlepane {
-    width: 33%;
-    height: 100%;
-    float:left;
-    
-    border-collapse: collapse;
+  width: 33%;
+  height: 100%;
+  float:left;
+
+  border-collapse: collapse;
 }
 
 .rightpane {
@@ -212,17 +223,17 @@ thead{
   width: 100%;
   height: 100px;
   border-collapse: collapse;
-  
+
 }
 
 .multiselect{
   color: white;
-  
+
 }
 
 .ui-multiselectlistbox-item.ui-state-highlight{
- color: white;
- 
+  color: white;
+
 }
 
 .ui-multiselectlistbox-item{
