--- a/CoffeCheap/web/resources/css/default.css
+++ b/CoffeCheap/web/resources/css/default.css
@@ -254,7 +254,7 @@ body, html {
 /*.ui-corner-all{
   color: black;
   background: white;
-}*/ /* Este cambia el color de fondo de todos los elementos usar con precaucion*/
+}*/ /* Este cambia el color de fondo de todos los elementos usar con precaucion :v*/
 
 .ui-state-highlight{
   background: buttonshadow;
