--- a/CoffeCheap/web/resources/css/cssLayout.css
+++ b/CoffeCheap/web/resources/css/cssLayout.css
@@ -20,7 +20,8 @@
 
 #left {
     float: left;
-    background-color: rgba(255, 255, 255,0.5);
+    background-image:linear-gradient(90deg, white, rgba(255, 255, 255,0.5));
+    /*background-color: rgba(255, 255, 255,0.5);*/
     padding: 5px;
 /*    width: 250px;
     height: 700px;*/
@@ -42,7 +43,7 @@
 }
 
 .left_content {
-     background-color: rgba(119, 80, 46, 0.5);
+    /*background-image:linear-gradient(90deg,rgba(255, 255, 255,0.5), white, rgba(255, 255, 255,0.5));*/
     padding: 5px;
     color: black;
     margin-left: 300px;
