--- a/CoffeCheap/web/resources/css/cssLayout.css
+++ b/CoffeCheap/web/resources/css/cssLayout.css
@@ -20,7 +20,7 @@
 
 #left {
     float: left;
-    background-image:linear-gradient(90deg, white, rgba(255, 255, 255,0.5));
+    background-image:linear-gradient(90deg, black, rgba(255, 255, 255,0.5));
     /*background-color: rgba(255, 255, 255,0.5);*/
     padding: 5px;
 /*    width: 250px;
