--- a/CoffeCheap/web/resources/css/cssLayout.css
+++ b/CoffeCheap/web/resources/css/cssLayout.css
@@ -90,11 +90,11 @@
 .ui-widget-content {
   /*modifica el contenido de la tabla*/
     /*background-image:linear-gradient(90deg,rgba(77, 38, 0,0.5), rgba(153, 77, 0,0.5), rgba(77, 38, 0,0.5));*/
-    background-image:linear-gradient(90deg,rgba(115, 153, 0,1), rgba(115, 153, 0,1), rgba(115, 153, 0,1));
-    background-color: rgba(255,255,255,0.1);
-    /* background-color: #DEB887; */
+    /*background-image:linear-gradient(90deg,rgba(115, 153, 0,1), rgba(115, 153, 0,1), rgba(115, 153, 0,1));*/
+    background-color: rgba(255,255,255,0);
+ 
     font-size: 16px;
-    border-color: rgba(0,0,0,1);
+    border-color: rgba(0,0,0,0);
     border-top-style: solid;
     border-right-style: solid;
     border-bottom-style: solid;
@@ -118,15 +118,16 @@
 
 .ui-widget-content  .ui-datatable td {
 /*  modifica el contenido de la tabla*/
-/*    background-image:linear-gradient(90deg,rgba(77, 38, 0,0.5), rgba(153, 77, 0,0.5), rgba(77, 38, 0,0.5));
-    background-color: rgba(83,72,63,0.1);*/
-/*     background-color: #DEB887; */
+    /*background-image:linear-gradient(90deg,rgba(77, 38, 0,0.5), rgba(153, 77, 0,0.5), rgba(77, 38, 0,0.5));*/
+    background-color: rgba(139,215,202,1);
+
     font-size: 16px;
     border-color: rgba(0,0,0,1);
     border-top-style: solid;
     border-right-style: solid;
     border-bottom-style: solid;
     border-left-style: solid;
+    color: black;
   
 }
 
@@ -144,29 +145,32 @@ input{
 
 .ui-widget-header {
     border: 1px solid rgba(0,0,0,1) ;
-    background: rgba(0,0,0,1) url(/CoffeChip/faces/javax.faces.resource/images/ui-bg_highlight-soft_100_c4c4c4_1x100.png?ln=primefaces-aristo) 50% 50% repeat-x;
+    background: rgba(0,0,0,0) url(/CoffeChip/faces/javax.faces.resource/images/ui-bg_highlight-soft_100_c4c4c4_1x100.png?ln=primefaces-aristo) 50% 50% repeat-x;
     /*background: rgba(0,0,0,1) linear-gradient(top,rgba(255,255,255,0.8),rgba(255,255,255,0));*/
-    background: rgba(0,0,0,0) -webkit-gradient(linear,left top,left bottom,from(rgba(0, 0, 0,1)),to(rgba(0, 0, 0, 1)));
+    background: rgba(191,147,88,1) -webkit-gradient(linear,left top,left bottom,from(rgba(0, 0, 0,0)),to(rgba(0, 0, 0, 0)));
     /*background: rgba(0,0,0,1) -moz-linear-gradient(top,rgba(255,255,255,0.8),rgba(255,255,255,0));*/
-    color: rgba(0,0,0,1);
+    color: rgba(0,255,0,1);
     font-weight: bold;
     text-shadow: 0 1px 0 rgba(255,255,255,0.7);
 }
 
 
 .ui-widget-content .ui-state-default {
-    border-bottom: 1px solid rgba(0,0,0,1);
+     border-bottom: 1px solid rgba(0,0,0,1);
     border-top: 1px solid rgba(0,0,0,1);
     border-left: 1px solid rgba(0,0,0,1);
     border-right: 1px solid rgba(0,0,0,1);
-    /*----------------------el siguiente santy lo comente*/
+/*    background-color: rgba(191,147,88,1);*/
+    /*----------------------el siguiente santy lo comento*/
     /*background: rgba(0,0,0,0) url(/CoffeChip/faces/javax.faces.resource/images/ui-bg_highlight-hard_80_c4c4c4_1x100.png?ln=primefaces-aristo) 50% 50% repeat-x;*/
     /*background: rgba(0,0,0,1) linear-gradient(top,rgba(255,255,255,0.8),rgba(255,255,255,0));*/
     /*---------------------------el siguiente santy lo comente*/
-    /*background: rgba(0, 0, 0,1) -webkit-gradient(linear,left top,left bottom,from(rgba(66, 62, 10, 0)),to(rgba(66, 62, 10, 0)));*/
+    background: rgba(191,147,88,1) -webkit-gradient(linear,left top,left bottom,from(rgba(66, 62, 10, 0)),to(rgba(66, 62, 10, 0)));
     /*background: rgba(0,0,0,1) -moz-linear-gradient(top,rgba(255,255,255,0.8),rgba(255,255,255,0));*/
     /*background-image:linear-gradient(90deg,rgba(0, 0, 0,1), rgba(0, 0, 0,1));*/
     font-weight: bold;
-    color: #fbf6f6;
-    text-shadow: 0 1px 0 rgba(255, 253, 253, 0.7);
+    color: white;
+    text-shadow: 0 0px 0 rgba(255, 253, 253, 0.7);
 }
+
+
