--- a/CoffeCheap/web/resources/css/default.css
+++ b/CoffeCheap/web/resources/css/default.css
@@ -1,6 +1,6 @@
 body {
-  background: url(../fondo18.jpg) ;   /*  blanco color de fondo*/
-  background-size: 600px;
+  background: url(../fondo19.svg) ;   /*  blanco color de fondo*/
+  
   font-size: 16px;
   font-family: Verdana, "Verdana CE",  Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
   color: #000000; /*color negro letra*/ 
