--- a/CoffeCheap/web/resources/css/cssLayout.css
+++ b/CoffeCheap/web/resources/css/cssLayout.css
@@ -1,15 +1,18 @@
 
 #top {
     position: relative;
-   background-color: rgba(0, 0, 0, 0.5);
- 
+    background-color: rgba(0, 0, 0, 0.5);
+
     align-items: center; 
 
     padding: 5px;
 
     margin: 0px 0px 50px 0px;
-    
+
 }
+
+
+
 
 #bottom {
     position: relative;
@@ -23,8 +26,8 @@
     background-image:linear-gradient(90deg, black, rgba(255, 255, 255,0.5));
     /*background-color: rgba(255, 255, 255,0.5);*/
     padding: 5px;
-/*    width: 250px;
-    height: 700px;*/
+    /*    width: 250px;
+        height: 700px;*/
     width: 250px;
     height: auto;
 }
@@ -53,9 +56,9 @@
     margin-top: 80px;
     margin-left: 60px;
     margin-right: 60px;;
-    
 
-    
+
+
 }
 
 .right_content {
@@ -64,18 +67,18 @@
 }
 
 #top a:link, #top a:visited {
-  color: white;
-  font-weight : bold;
-  text-decoration: none;
-/*  background-color:#503512;  cambia toda el aria de los botones*/
-   
+/*    color: white;*/
+    font-weight : bold;
+    text-decoration: none;
+    /*  background-color:#503512;  cambia toda el area de los botones*/
+
 }
 
 #top a:link:hover, #top a:visited:hover  {
-  color: black;
-  font-weight : bold;
-  text-decoration : underline;
-/*   background-color: blue; / modfica el color cuando se le pone el raton en sima del botn de la barra*/
+    color: black;
+    font-weight : bold;
+    text-decoration : underline;
+    /*   background-color: blue; / modfica el color cuando se le pone el raton en sima del botn de la barra*/
 }
 
 
