--- a/CoffeCheap/web/WEB-INF/template/Template.xhtml
+++ b/CoffeCheap/web/WEB-INF/template/Template.xhtml
@@ -26,21 +26,24 @@
     <h:body>
 
         <div id="top" class="top" align="center"><B>
-
+                <f:event type="preRenderView" listener="#{menuBean.usu()}"/>
                 <ui:insert name="top">
                     <b:navBar brand="Brand" brandHref="#" inverse="true" fixed="top">
                         <b:navbarLinks>
                             <b:navLink value="Link" href="#"></b:navLink>
                             <b:navLink value="Link" href="#"></b:navLink>
-                            <b:dropMenu value="Dropdown">
-                                <b:navLink value="Action" href="#"></b:navLink>
-                                <b:navLink value="Another action" href="#"></b:navLink>
-                                <b:navLink value="Something else here" href="#"></b:navLink>
-                                <b:navLink></b:navLink>
-                                <b:navLink header="Nav header"></b:navLink>
-                                <b:navLink value="Separated link" href="#"></b:navLink>
-                                <b:navLink value="One more separated link" href="#"></b:navLink>
+
+                            <b:dropMenu value="Permiso">
+                                <c:forEach var = "i" begin = "1" end = "#{menuBean.Cantidad1()}" step="1">
+                                    <b:dropMenu value="#{menuBean.Mostrar(menuBean.CodigoEnvio(i))}">
+                                        <c:forEach var = "j" begin = "1" end = "#{menuBean.Cantidad2(menuBean.CodigoEnvio(i))}" step="1">
+                                            <b:navLink value="#{menuBean.Submenu(menuBean.CodigoEnvio(i), menuBean.CodigoEnvio2(menuBean.CodigoEnvio(i), j))}" 
+                                                       href="#{menuBean.PaginaLlamado(menuBean.CodigoEnvio(i), menuBean.CodigoEnvio2(menuBean.CodigoEnvio(i), j))}"></b:navLink>
+                                        </c:forEach>
+                                    </b:dropMenu>
+                                </c:forEach>
                             </b:dropMenu>
+
                         </b:navbarLinks>
                         <h:form styleClass="navbar-form navbar-right">
                             <div class="form-group">
@@ -57,29 +60,6 @@
                 </ui:insert>
             </B></div>
         <div>
-
-            <div id="left" align="center">
-                <ui:insert name="left"> 
-                    <!--<f:event type="preRenderView" listener="{menuBean.usu()}"/>-->
-                    <h:form>
-                        <p:growl id="messages" showDetail="true" />
-                        <!--<p:slideMenu style="width:auto;height:auto" class="col-ms-3">            
-                            <c:forEach var = "i" begin = "1" end = "{menuBean.Cantidad1()}" step="1">
-                                <p:submenu label="{menuBean.Mostrar(menuBean.CodigoEnvio(i))}">
-                                    <c:forEach var = "j" begin = "1" end = "{menuBean.Cantidad2(menuBean.CodigoEnvio(i))}" step="1">
-                                        <p:menuitem value="{menuBean.Submenu(menuBean.CodigoEnvio(i), menuBean.CodigoEnvio2(menuBean.CodigoEnvio(i), j))}" 
-                                                    url="{menuBean.PaginaLlamado(menuBean.CodigoEnvio(i), menuBean.CodigoEnvio2(menuBean.CodigoEnvio(i), j))}"/>
-                                    </c:forEach>
-                                    
-                                </p:submenu>
-                            </c:forEach>
-                            <p:separator />
-                        </p:slideMenu>-->
-                    </h:form>
-
-
-                </ui:insert>
-            </div>
 
             <div id="content" class="left_content flip" align="center"><B>
                     <ui:insert name="content">
