--- a/CoffeCheap/web/WEB-INF/template/Template.xhtml
+++ b/CoffeCheap/web/WEB-INF/template/Template.xhtml
@@ -22,7 +22,7 @@
 
         
 
-        <title>Empresa de Parqueo</title>
+        <title>Restaurante CoffeeCream</title>
     </h:head>
 
     <h:body>
