--- a/CoffeCheap/web/WEB-INF/template/Template.xhtml
+++ b/CoffeCheap/web/WEB-INF/template/Template.xhtml
@@ -18,7 +18,7 @@
         
        
 
-         <!--<f:event type="preRenderView" listener="{verificar_login.vrificarSession()}"/> -->
+         <f:event type="preRenderView" listener="#{verificar_login.vrificarSession()}"/>
 
         
 
