--- a/CoffeCheap/web/WEB-INF/template/Template.xhtml
+++ b/CoffeCheap/web/WEB-INF/template/Template.xhtml
@@ -18,8 +18,8 @@
         
        
 
-         <f:event type="preRenderView" listener="#{verificar_login.vrificarSession()}"/>
-
+         <!--<f:event type="preRenderView" listener="{verificar_login.vrificarSession()}"/>
+-->
         
 
         <title>Restaurante CoffeeCream</title>
