--- a/CoffeCheap/web/WEB-INF/template/Template.xhtml
+++ b/CoffeCheap/web/WEB-INF/template/Template.xhtml
@@ -13,7 +13,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="/css/default.css"/>
         <h:outputStylesheet name="/css/cssLayout.css"/>
-        <h:outputStylesheet name="/css/animate.css"/>        
+        <h:outputStylesheet name="/css/animate.css"/>
+        <h:outputScript name="/css/jquery-fecha.js"/>  
         
         
        
